--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +24,7 @@
 
         <div class="header__container--mobile">
             <a class="logo link" href="./index.html">
-                <span class="web">Web</span>Studio</a>
+                <span class="web">Поклик</span> Честі</a>
                 <button 
                 class="mobile__btn-menu js-open-menu"
                 type="button"
@@ -58,13 +58,13 @@
         <div class="header__container--connect">
             <ul class="list connect">
                 <li class="connect__item">
-                    <a class="link connect__mail" href="mailto:info@devstudio.com">
+                    <a class="link connect__mail" href="mailto:zolik100@i.ua">
                         <svg class="icon-mail">
                             <use href="images/icons.svg#icon-envelope"></use>
                         </svg> info@devstudio.com</a>
                 </li>
                 <li class="connect__item">
-                    <a class="link connect__tel" href="tel:+380961111111">
+                    <a class="link connect__tel" href="tel:+380639357417">
                         <svg class="icon-tel">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg> +38 096 111 11 11</a>
@@ -97,12 +97,12 @@
 
                 <ul class="list mobile__contacts">
                     <li class="mobile__contacts-item">
-                        <a class="mobile__contacts-link" href="tel:+380961111111">
+                        <a class="mobile__contacts-link" href="tel:+380639357417">
                             +38 096 111 11 11
                         </a>
                     </li>
                     <li class="mobile__contacts-item">
-                        <a class="mobile__contacts-link mobile__contacts-link--mail" href="mailto:info@devstudio.com">
+                        <a class="mobile__contacts-link mobile__contacts-link--mail" href="mailto:zolik100@i.ua">
                             info@devstudio.com
                         </a>
                     </li>
