--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                     <a class="link connect__mail" href="mailto:zolik100@i.ua">
                         <svg class="icon-mail">
                             <use href="images/icons.svg#icon-envelope"></use>
-                        </svg> info@devstudio.com</a>
+                        </svg> zolik100@i.ua</a>
                 </li>
                 <li class="connect__item">
                     <a class="link connect__tel" href="tel:+380639357417">
                         <svg class="icon-tel">
                             <use href="./images/icons.svg#icon-smartphone"></use>
-                        </svg> +38 096 111 11 11</a>
+                        </svg> +38 063 935 74 17</a>
                 </li>
             </ul>
         </div>
@@ -98,17 +98,17 @@
                 <ul class="list mobile__contacts">
                     <li class="mobile__contacts-item">
                         <a class="mobile__contacts-link" href="tel:+380639357417">
-                            +38 096 111 11 11
+                            +38 063 935 74 17
                         </a>
                     </li>
                     <li class="mobile__contacts-item">
                         <a class="mobile__contacts-link mobile__contacts-link--mail" href="mailto:zolik100@i.ua">
-                            info@devstudio.com
+                            zolik100@i.ua
                         </a>
                     </li>
                 </ul>
 
-                <ul class="list mobile__social-list">
+                <!-- <ul class="list mobile__social-list">
                     <li class="mobile__social-item">
                         <a class="mobile__social-link link" href=""> instagram </a>
                     </li>
@@ -121,7 +121,7 @@
                     <li class="mobile__social-item">
                         <a class="mobile__social-link link" href=""> linkedin </a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </div>
 
@@ -166,7 +166,7 @@
 
     <section class="actions">
         <div class="container">
-        <h2 class="occupation-img">Чем мы занимаемся</h2>
+        <h2 class="occupation-img">Добрі справи</h2>
         <ul class="list occupation-list">
             <li class="occupation-list__item">
                 <div class="occupation-list__wrap">
@@ -222,7 +222,7 @@
 
     <section class="team">
         <div class="container">
-        <h2 class="team-title">Наша команда</h2>
+        <h2 class="team-title">Команда мрії</h2>
         <ul class="list team-list">
             <li class="team-list__li">
                 <!-- <img src="./images/портрет.jpg" alt="Игорь Демьяненко" width="270" > -->
